--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,2 +1,20 @@
 @import 'blocks/promo';
 @import 'base/mixins';
+@import 'blocks/masterclass';
+@import 'blocks/reviews';
+@import 'blocks/footer';
+
+.container{
+    max-width: 1150px;
+    margin: 0 auto;
+}
+
+*{
+    border: 0;
+    margin: 0;
+    padding: 0;
+}
+
+*{
+    font-family: 'Montserrat', 'Bodoni Moda', sans-serif;
+}
