--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -1,4 +1,128 @@
 .footer{
     height: 300px;
     background-color: #1f1f1f;
+    &__wrapper{
+        display: grid;
+        grid-template-columns: repeat(3, minmax(260px, 330px));
+        column-gap: 130px;
+    }
+    &__item{
+        &-first{
+            display: grid;
+        }
+        &-second{
+            display: grid;
+            grid-template-rows:repeat(2, minmax(35px, 40px)) ;
+            row-gap: 32px;
+            justify-self: center;
+            margin-top: 25px;
+        }
+        &-thirdy{
+            display: grid;
+            grid-template-rows: repeat(2, minmax(20px, 60px));
+            margin-top: 38px;
+        }
+
+        &-logo{
+            display: grid;
+            grid-template-columns: 90px 320px;
+            grid-template-rows: auto;
+            column-gap: 5px;
+            align-items: center;
+        }
+        &-img{
+            img{
+                width: 85px;
+                height: 85px;
+            }
+        }
+        &-descr{
+            font-size: 38px;
+            font-weight: 900;
+            line-height: 1;
+            color: #fff;
+        }
+        &-company{
+            font-size: 16px;
+            font-weight: 300;
+            line-height: 1.6;
+            color: #ffffff;
+        }
+        &-rights{
+            font-size: 12px;
+            font-weight: 300;
+            line-height: 1.6;
+            color: #ffffff;
+            margin-top: 100px;
+        }
+        &-tel{
+            font-size: 32px;
+            font-weight: 900;
+            line-height: 1.6;
+            color: #ffffff;
+        }
+
+        &-social{
+            display: grid;
+            grid-template-columns: repeat(3, 40px);
+            grid-template-rows: auto;
+            column-gap: 20px;
+            img{
+                width: 35px;
+                height: 35px;
+            }
+        }
+        &-youtube{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            border: 1px solid rgb(217, 73, 125);
+            border-radius: 6px;
+            cursor: pointer;
+
+            &:hover{
+                background-color: #ffffff;
+            }
+        }
+        &-telegram{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            border: 1px solid rgb(217, 73, 125);
+            border-radius: 6px;
+            cursor: pointer;
+
+            &:hover{
+                background-color: #ffffff;
+            }
+        }
+        &-vk{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            border: 1px solid rgb(217, 73, 125);
+            border-radius: 6px; 
+            cursor: pointer;
+
+            &:hover{
+                background-color: #ffffff;
+            }
+            
+        }
+        &-confidencial{
+            a{
+                font-size: 16px;
+                font-weight: 300;
+                color: #fff;
+            }
+        }
+        &-info{
+            font-size: 12px;
+            font-weight: 300;
+            color: #fff;
+        }
+    }
 }
